ver 2.3.1 RTF-add review rating host and update.sql
